@@ -1,6 +1,9 @@
                                                      -*- coding: utf-8 -*-
 Changes with APR-util 1.5.1
 
+  *) MinGW: Support shared builds of apr-util when apr is shared.
+     PR 46175.  [Carlo Bramini <carlo.bramix libero.it>, Jeff Trawick]
+
   *) Add support for Berkeley DB 5.2 and 5.3. Simplify detection skript.
      PR 53684.  [Rainer Jung]
 
